Main page video responsive

--- a/src/pug/layouts/banner.pug
+++ b/src/pug/layouts/banner.pug
@@ -1,4 +1,7 @@
 .banner
+    video(autoplay muted loop)
+        source(src="/img/custom/video-top-1.7Mb.mp4" type="video/mp4")
+        span Your browser does not support the video tag.
     .container
         .banner__logo
             .logo.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
@@ -9,5 +12,3 @@
 
         .btn__wrapper.btn__wrapper--center
             .btn.btn--full ПОЛУЧИТЬ БЕСПЛАТНЫЙ КУРС
-
-    //<iframe frameborder="0" width="100%" src="https://player.vimeo.com/video/350938025?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=1&amp;loop=1&amp;autopause=0&amp;color=ffffff"></iframe>
