--- a/src/stylus/customs/buttons.styl
+++ b/src/stylus/customs/buttons.styl
@@ -16,8 +16,8 @@ a.btn
   border-radius 25px
   box-shadow  0 10px 15px rgba(0,0,0,.5)
   transition 0.7s
-  +to-width($screen-xm-max)
-    width 50%
+  //+to-width($screen-xm-max)
+    //width 50%
   +to-width($screen-xs-max)
     width 100%
     font-size 13px
