--- a/src/stylus/styles/blocks/header.styl
+++ b/src/stylus/styles/blocks/header.styl
@@ -221,26 +221,51 @@
 
 
 .banner
-  background-image: url(../img/custom/main-banner.jpg)
-  background-position 50% 50%
-  background-size cover
-  min-height 100vh
-  padding 100px 0 50px
+  //position relative
+  //padding-bottom 56.25%
+  //height 0
+  //overflow hidden
+  //min-height 100vh
+  //padding 100px 0 50px
   +to-width($screen-sm-max)
-    padding 70px 0 30px
+    background-image: url(../img/custom/main-banner.jpg)
+    background-position 50% 50%
+    background-size cover
+    height 100vh
+    //padding 70px 0 30px*/
 
   > .container
-    height 100%
-    //position absolute
-    //z-index 2
+    //height 100%
+    top 2%
+    position absolute
+    max-width none
+    z-index 2
     //left: 50%;
     //transform: translateX(-50%);
 
-  iframe
+  iframe,
+  video
+    background-image: url("../img/custom/main-banner.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+    height: 100vh;
     position relative
-    z-index 1
-    max-width 100%
-    height 100vh
+    top 0
+    left 50%
+    z-index -100
+    -webkit-transform translateX(-50%) translateY(0%)
+    transform translateX(-50%) translateY(0%)
+    min-width 100%
+    min-height 100%
+    width auto
+    //height auto
+    //background-size cover
+    pointer-events none
+    +to-width($screen-sm-max)
+      display none
+
+    //max-width 100%
+    //height 100vh
 
   &__logo
     height 100%
@@ -274,6 +299,7 @@
 
   &__text
     width 65%
+    max-width 700px
     background-color rgba(0,0,0,.5)
     color #fff
     font-weight 300
