--- a/src/stylus/styles/content/home.styl
+++ b/src/stylus/styles/content/home.styl
@@ -89,18 +89,27 @@ $program-width = 65%
 
 //-----------------
 .video
+  position relative
+  padding-bottom 56.25%
+  height 0
+  overflow hidden
   background-image url(../img/custom/img-video.jpg)
   background-size cover
   background-position 50% 50%
-  min-height 500px
-  height 100vh
-
+  iframe
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+  //min-height 500px
+  //height 100vh
   +to-width($screen-sm-max)
     min-height auto
 
 
 //-----------------
-.program
+.study-program
   background-color #f1f2f2
   background-image url(../img/custom/lotos.png)
   background-position 50% 50%
