faculties page progress 1

--- a/src/pug/layouts/faculties-main.pug
+++ b/src/pug/layouts/faculties-main.pug
@@ -7,25 +7,46 @@
 
         .faculties-main__list.grid.grid-top
             .col-1-4.col-sm-1-2.col-xs-1-1
-                .about__item
-                    .about__icon.about__icon--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
-                    .about__name.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") О СЕМЬЕ И ОТНОШЕНИЯХ
-                    .about__desc.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s") Как построить гармоничные отношения? Как воспитывать ребенка счастливым и уверенным, без крика?
+                .faculties-main__item
+                    a(href="#null").faculties-main__img.faculties-main__img--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
+                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ДАЕТ КВАЛИФИКАЦИЮ
+                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                        p
+                            | Искусство жизни консультант
+                            br
+                            | Организатор и лидер
+                            br
+                            | Наставник
 
             .col-1-4.col-sm-1-2.col-xs-1-1
-                .about__item
-                    .about__icon.about__icon--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
-                    .about__name.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") О ЗДОРОВЬЕ И СЧАСТЬЕ
-                    .about__desc.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s") Как быть здоровым и энергичным? Как излечить любую болезнь?
+                .faculties-main__item
+                    a(href="#null").faculties-main__img.faculties-main__img--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
+                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                        p
+                            | Консультант йоги
+                            br
+                            | Преподаватель йоги
+                            br
+                            | Йога-терапевт
 
             .col-1-4.col-sm-1-2.col-xs-1-1
-                .about__item
-                    .about__icon.about__icon--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
-                    .about__name.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") О ПРЕДНАЗНАЧЕНИИ И ПРОФЕССИИ
-                    .about__desc.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s") Как найти свое предназначение и развить свой талант? Какая профессия подходит мне?
-
+                .faculties-main__item
+                    a(href="#null").faculties-main__img.faculties-main__img--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
+                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                        p
+                            | Консультант-астролог
+                            br
+                            | Астро-психолог
+                            br
+                            | Астро-консультант HR-агентств
             .col-1-4.col-sm-1-2.col-xs-1-1
-                .about__item
-                    .about__icon.about__icon--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
-                    .about__name.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ОБ УСПЕХЕ И ДЕЛОВОЙ ЖИЗНИ
-                    .about__desc.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s") Как, где и с кем зарабатывать деньги? Как найти бизнес-идею и открыть дело?
+                .faculties-main__item
+                    a(href="#null").faculties-main__img.faculties-main__img--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
+                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                        p
+                            | Васту-дизайнер интерьеров
+                            br
+                            | Васту-архитектор
