--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -8,4 +8,62 @@
   padding-top 120px
 
   &__list
-    margin 30px 0
+    margin-top 30px
+    margin-bottom 30px
+
+  &__item
+    text-align center
+
+  &__img
+    display flex
+    justify-content center
+    align-items center
+    width 100%
+    height 250px
+    background-size cover
+    background-position 50% 50%
+    background-repeat no-repeat
+    border-radius 25px
+    position relative
+
+    &--1
+      background-image url(../img/custom/faculty-veda.jpg)
+
+    &--2
+      background-image url(../img/custom/faculty-yoga.jpg)
+
+    &--3
+      background-image url(../img/custom/faculty-jyotish.jpg)
+
+    &--4
+      background-image url(../img/custom/faculty-vastu.jpg)
+
+    &:after
+      content ""
+      position absolute
+      top 0
+      bottom 0
+      left 0
+      right 0
+      z-index 2
+      border-radius 25px
+      background #92278f
+      background linear-gradient(45deg, #92278f 0%,#92278f 0%,#00c0f3 100%)
+      opacity 0.5
+
+  &__name
+    text-transform uppercase
+    position relative
+    color $second-color
+
+    &:after
+      content: ''
+      display block
+      width 100%
+      margin 20px auto 15px
+      height 1px
+      background-color #000
+
+  &__desc
+    font-size 14px
+    line-height 2.5em
