faculties page faculties-main finish

--- a/src/pug/layouts/faculties-main.pug
+++ b/src/pug/layouts/faculties-main.pug
@@ -9,6 +9,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
+                        .faculties-main__img--title Искусство жизни.<br>Веды. Практическая<br>психология
+                    .btn__wrapper.btn__wrapper--center-overlapped
+                        .btn.btn--full От 21 000 руб.
                     .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ДАЕТ КВАЛИФИКАЦИЮ
                     .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
                         p
@@ -21,6 +24,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
+                        .faculties-main__img--title Классическая йога.<br>Йога-терапия<br><br>
+                    .btn__wrapper.btn__wrapper--center-overlapped
+                        .btn.btn--full От 21 000 руб.
                     .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
                     .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
                         p
@@ -33,6 +39,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
+                        .faculties-main__img--title Ведическая<br>астрология<br>джйотиш
+                    .btn__wrapper.btn__wrapper--center-overlapped
+                        .btn.btn--full От 21 000 руб.
                     .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
                     .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
                         p
@@ -44,6 +53,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
+                        .faculties-main__img--title Ведическая<br>архитектура<br>васту
+                    .btn__wrapper.btn__wrapper--center-overlapped
+                        .btn.btn--full От 21 000 руб.
                     .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
                     .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
                         p
