--- a/src/pug/layouts/how.pug
+++ b/src/pug/layouts/how.pug
@@ -12,7 +12,7 @@
 
         .how__bg
             .how__wrapper
-                h2.title__wrapper.title__wrapper--how
+                h2.title__wrapper.title__wrapper--center-overlapped
                     .title__main Программа
                     .title__subtext каждого курса включает:
 
@@ -36,6 +36,6 @@
                         li.how__item Экскурсия по древним святым местам (для курса в Индии)
                         li.how__item Ягия — ритуал очищения судьбы (для курса в Индии)
 
-        .btn__wrapper.btn__wrapper--how
+        .btn__wrapper.btn__wrapper--center-overlapped
             .btn.btn--full Узнать больше
 
