--- a/src/stylus/customs/buttons.styl
+++ b/src/stylus/customs/buttons.styl
@@ -73,9 +73,11 @@ input[type="submit"]
   &--center
     justify-content center
 
-  &--how
+  &--center-overlapped
     justify-content center
     margin-top -28px
+    .btn
+      z-index 5
 
   > *:not(:first-child)
     margin-left 20px
