--- a/src/stylus/styles/content/home.styl
+++ b/src/stylus/styles/content/home.styl
@@ -438,7 +438,7 @@ $program-width = 65%
       top 50%
       transform translateY(-50%)
 
-.btn__wrapper--how .btn
+.btn__wrapper--center-overlapped .btn
   +to-width($screen-xs-max)
     width 70%
 
