faculties page schedule finished

--- a/src/pug/content/faculties.pug
+++ b/src/pug/content/faculties.pug
@@ -1,2 +1,4 @@
 include ../layouts/faculties-about
 include ../layouts/faculties-main
+include ../layouts/schedule
+include ../layouts/faculties-courses
