--- a/src/stylus/styles/content/home.styl
+++ b/src/stylus/styles/content/home.styl
@@ -43,18 +43,18 @@ $program-width = 65%
 //-----------------
 .about
   padding 90px 0
-  
+
   +to-width($screen-sm-max)
     padding 40px 0
-  
+
   &__list
     margin 30px 0
     +to-width($screen-md-max)
       display block
-    
+
   &__item
     text-align center
-    
+
   &__icon
     width 167px
     height 167px
@@ -184,23 +184,32 @@ $program-width = 65%
     +to-width($screen-xs-max)
       flex auto
 
-  &:before,
+  &:before
+    content ""
+    display block
+    max-width 15%
+    flex 0 15%
+    height 1px
+    background-color #cdcece
+    margin-right 30px
+    +to-width($screen-xs-max)
+      display none
   &:after
     content ""
     display block
-    max-width 20%
-    flex 0 20%
+    max-width 15%
+    flex 0 15%
     height 1px
     background-color #cdcece
-    margin 0 30px
+    margin-left 30px
     +to-width($screen-xs-max)
       display none
 
   &__long
     &:before,
     &:after
-      max-width 40%
-      flex 0 40%
+      max-width 100%
+      flex 0 100%
 
 
 .text-border
