faculties page almost finished

--- a/src/pug/layouts/schedule.pug
+++ b/src/pug/layouts/schedule.pug
@@ -5,7 +5,7 @@
             .title__subtext.with-border.with-border__long
                 span Очных курсов академии
 
-        h2.schedule__inner-title Ступень I
+        h3.title__wrapper.title__light Ступень I
         table.responsive-table-1
             tr
                 td.schedule__icon
@@ -34,7 +34,7 @@
                 td
                     a.underline-link Подробнее
 
-        h2.schedule__inner-title Ступень II
+        h3.title__wrapper.title__light Ступень II
         table.responsive-table-1
             tr
                 td.schedule__icon
@@ -57,7 +57,7 @@
                 td
                     a.underline-link Подробнее
 
-        h2.schedule__inner-title Ступень III
+        h3.title__wrapper.title__light Ступень III
         table.responsive-table-1
             tr
                 td.schedule__icon
@@ -80,7 +80,7 @@
                 td
                     a.underline-link Подробнее
 
-        h2.schedule__inner-title Ступень IV
+        h3.title__wrapper.title__light Ступень IV
         table.responsive-table-1
             tr
                 td.schedule__icon
@@ -103,7 +103,7 @@
                 td
                     a.underline-link Подробнее
 
-        h2.schedule__inner-title Отдельные курсы
+        h3.title__wrapper.title__light Отдельные курсы
         table.responsive-table-1
             tr
                 td.schedule__icon
