--- a/src/pug/content/faculties.pug
+++ b/src/pug/content/faculties.pug
@@ -2,3 +2,4 @@ include ../layouts/faculties-about
 include ../layouts/faculties-main
 include ../layouts/schedule
 include ../layouts/faculties-courses
+include ../layouts/faculties-knowledge
