--- a/src/pug/layouts/faculties-main.pug
+++ b/src/pug/layouts/faculties-main.pug
@@ -1,6 +1,6 @@
 .faculties-main
     .container
-        h2.title__wrapper.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
+        h2.title__wrapper.wow.animated.wow.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
             .title__subtext В академии действуют
             .title__pink.with-border.with-border__long
                 span Факультеты
@@ -12,8 +12,8 @@
                         .faculties-main__img--title Искусство жизни.<br>Веды. Практическая<br>психология
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
-                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ДАЕТ КВАЛИФИКАЦИЮ
-                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                    .faculties-main__name ДАЕТ КВАЛИФИКАЦИЮ
+                    .faculties-main__desc
                         p
                             | Искусство жизни консультант
                             br
@@ -27,8 +27,8 @@
                         .faculties-main__img--title Классическая йога.<br>Йога-терапия<br><br>
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
-                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
-                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                    .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc
                         p
                             | Консультант йоги
                             br
@@ -42,8 +42,8 @@
                         .faculties-main__img--title Ведическая<br>астрология<br>джйотиш
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
-                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
-                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                    .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc
                         p
                             | Консультант-астролог
                             br
@@ -56,8 +56,8 @@
                         .faculties-main__img--title Ведическая<br>архитектура<br>васту
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
-                    .faculties-main__name.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".4s") ГОТОВИТ СПЕЦИАЛИСТОВ
-                    .faculties-main__desc.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".8s")
+                    .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
+                    .faculties-main__desc
                         p
                             | Васту-дизайнер интерьеров
                             br
