--- a/src/stylus/_core/variables.styl
+++ b/src/stylus/_core/variables.styl
@@ -10,6 +10,7 @@ $font-second = Romul;
 
 $base-color = #00c0f3
 $second-color = #92278f
+$gray-color = #f2f2f2
 $base-color-hover = darken($base-color, 20%)
 $secons-color-hover = darken($second-color, 20%)
 
@@ -24,3 +25,4 @@ $screen-sp-max = ($screen-xm-min - 1)
 $screen-xm-max = ($screen-sm-min - 1)
 $screen-sm-max = ($screen-md-min - 1)
 $screen-md-max = ($screen-lg-min - 1)
+
