--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -1,11 +1,16 @@
+
 .faculties-about
   padding-top 170px
+  +to-width($screen-sm-max)
+    padding-top 110px
   &__text
     text-align center
 
 //---------------
 .faculties-main
   padding-top 100px
+  +to-width($screen-sm-max)
+    padding-top 60px
 
   &__list
     margin-top 30px
@@ -24,7 +29,8 @@
     background-position 50% 50%
     background-repeat no-repeat
     border-radius 25px
-    //position relative
+    +to-width($screen-sm-max)
+      height 200px
 
     &--1
       background-image url(../img/custom/faculty-veda.jpg)
@@ -53,8 +59,13 @@
 
     > div
       z-index 4
+      position absolute
+      top 60px
       width 100%
       background-color rgba(0,0,0,.5)
+      +to-width($screen-sm-max)
+        top 40px
+
 
     &--title
       padding 1em 1em
@@ -101,15 +112,6 @@
   +to-width($screen-sm-max)
     padding 30px 0
 
-  &__inner-title
-    text-align center
-    margin 50px 0 40px
-    font-weight 300
-    +to-width($screen-sm-max)
-      margin-bottom 40px
-    +to-width($screen-xs-max)
-      margin-bottom 20px
-
   &__icon
 
     svg
@@ -121,7 +123,17 @@
       path
         fill $second-color
 
+.faculties-courses
+  padding 50px 0
+  +to-width($screen-sm-max)
+    padding 30px 0
+
+  &__desc
+    padding-top 2rem
+    font-size 14px
+
 //--- common ------
+
 .responsive-table-1
   width 100%
   border-radius 25px
@@ -145,3 +157,106 @@
 .underline-link
   text-decoration underline
   cursor pointer
+
+.line-divider
+  height 1px
+  background-color #cdcece
+  margin: 30px 0
+
+.line-divider-short
+  height 1px
+  background-color black
+  width 10%
+  margin: 30px auto
+
+.list-in-oval
+  padding 60px 0
+  font-size 12px
+  line-height 1.6rem
+  +to-width($screen-sm-max)
+    padding 40px 0
+
+  &__wrapper
+    background-color $gray-color
+    text-align center
+    position relative
+    border-radius 150px
+    padding 25px 0
+    display flex
+    width 80%
+    margin 40px auto 40px
+    +to-width($screen-md-max)
+      width 100%
+    +to-width($screen-sm-max)
+      flex-direction column
+      border-radius 50px
+      justify-content center
+
+
+  &__list-left
+    flex-basis: 47%
+    text-align right
+    list-style none
+    +to-width($screen-sm-max)
+      flex-basis: 100%
+      text-align left
+      padding-left 1.3em
+      margin auto
+      min-width 360px
+    :before
+      content "·"
+      font-size 50px
+      vertical-align middle
+      text-align center
+      visibility hidden
+      +to-width($screen-sm-max)
+        visibility visible
+        padding-right .3em
+
+  &__list-right
+    flex-basis: 53%
+    list-style none
+    text-align left
+    padding-left 1.3em
+    +to-width($screen-sm-max)
+      flex-basis: 100%
+      margin auto
+      min-width 365px
+    :before
+      content "·"
+      font-size 50px
+      vertical-align middle
+      text-align center
+      padding-right .3em
+
+.two-blocks
+
+  &__with-border
+    border 2px solid $gray-color
+    border-radius 20px
+
+    &--title
+      margin-left 60px
+      margin-top 40px
+      font-weight normal
+      font-size 1.5rem
+      color #021026
+      +to-width($screen-xs-max)
+        margin-left 20px
+    ul
+      list-style none
+      padding-bottom 20px
+      li
+        margin 0 0 10px
+        padding 0 0 0 20px
+        &:before
+          content ""
+          display inline-block
+          width 15px
+          height 15px
+          margin-right 20px
+          vertical-align middle
+          background-image url(../img/custom/marker.png)
+          background-size cover
+      +to-width($screen-xs-max)
+        padding-left 0
