faculties page finished

--- a/src/pug/layouts/faculties-courses.pug
+++ b/src/pug/layouts/faculties-courses.pug
@@ -6,10 +6,10 @@
                 span Академии
         h3.title__light.title__light--pink Фундаментальные знания
 
-        .grid.grid-top
+        .faculties-courses__list.grid.grid-top
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
                         .faculties-main__img--title Вводный курс<br>Академии
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full Бесплатно
@@ -18,7 +18,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
                         .faculties-main__img--title Что такое веди-<br>ческая астрология<br>джйотиш?
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full Бесплатно
@@ -27,7 +27,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
                         .faculties-main__img--title Мировоззрение<br>и гармония<br>сознания
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 2 000 руб.
@@ -36,7 +36,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
                         .faculties-main__img--title Дхарма<br>Предназначение<br>Цели и путь
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 6 000 руб.
@@ -47,10 +47,10 @@
 
         h3.title__light.title__light--pink Здоровье и гармоничные отношения
 
-        .grid.grid-top
+        .faculties-courses__list.grid.grid-top
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-5.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
                         .faculties-main__img--title Онлайн марафон<br>"Биохакинг.<br>Живая диета"
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 6 000 руб.
@@ -59,7 +59,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-6.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
                         .faculties-main__img--title Здоровье<br>гормональной<br>системы
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 900 руб.
@@ -68,7 +68,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-7.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
                         .faculties-main__img--title Марафон<br>для женщин<br>"Полюби себя"
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 3 900 руб.
@@ -77,7 +77,7 @@
 
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
-                    a(href="#null").faculties-main__img.faculties-main__img--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
+                    a(href="#null").faculties-main__img.faculties-courses__img-8.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
                         .faculties-main__img--title Подготовка.<br>Беременность.<br>Рождение ребенка.
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 8 000 руб.
