--- a/src/pug/layouts/faculties-knowledge.pug
+++ b/src/pug/layouts/faculties-knowledge.pug
@@ -8,7 +8,7 @@
 
         h4(style="margin-top: 50px").title__wrapper.title__light-no-bottom-margin Программа предусматривает не просто передачу профессиональных знаний,<br>но и развитие человека и в материальном и в духовном плане
 
-        .two-blocks.grid.grid-top
+        .two-blocks.grid
             .col-1-2.col-sm-1-1
                 .two-blocks__with-border
                     h3.two-blocks__with-border--title Четыре цели имеет каждый человек:
@@ -29,3 +29,22 @@
         h4(style="margin-top: 50px").title__wrapper.title__light-no-bottom-margin Каждая ступень академии дает студенту и профессиональные знания<br>но и возможность для достижения следующего уровня сознания<br>и реализации следующей жизни. Между курсами происходит практическая<br>реализация полученных знаний в жизни.
 
         .line-divider-short
+
+        .two-blocks.two-blocks__with-margin.grid
+            .col-1-2.col-sm-1-1
+                .two-blocks__with-backimg.faculties-knowledge__img-1.two-blocks__with-backimg--left
+                    .two-blocks__item
+                        h3.two-blocks__title2 В академии<br>действует система грантов
+
+                        .line-divider-white
+
+                        p.text__c.text__white Если вы стеснены в средствах, но ощущаете необходимость развития и получения уникальной профессии,
+                          | вы можете подать заявку<br>в установленной форме на получение гранта<br>в размере до 50% стоимости обучения.
+                        br
+                        a(href="#null").text__c.text__bold jyotipeeth@gmail.com
+
+            .col-1-2.col-sm-1-1
+                .two-blocks__with-backimg.faculties-knowledge__img-2.two-blocks__with-backimg--right
+                    .two-blocks__item
+                        p.text__c.text__white Для студентов, успешно<br>сдавших экзамены и прошедших практику,<br>
+                            | мы гарантируем трудоустройство<br>сразу после окончания академии с уровнем<br>дохода выше среднего страны пребывания
