--- a/src/pug/layouts/faculties-about.pug
+++ b/src/pug/layouts/faculties-about.pug
@@ -5,8 +5,7 @@
                 span Факультеты и курсы
             .title__subtext Обучение онлайн и очно <br> в Индии, России и Казахстане по-русски
         .faculties-about__text
-            p Науки: Веды, Астрология, Джйотиш, Йога, Васту, Аюрведа - им более 5000 лет!
-            p Познайте искусство счастливой жизни. Обретите благородную профессию.
-            br
-            p Вы поймете себя и Вселенную, соприкоснетесь с источником всех Знаний человечества!
-            p Наставники Академии посвящены хранителями древнейших школ на Земле.
+            p Науки: Веды, Астрология, Джйотиш, Йога, Васту, Аюрведа - им более 5000 лет!<br>
+              | Познайте искусство счастливой жизни. Обретите благородную профессию.
+            p Вы поймете себя и Вселенную, соприкоснетесь с источником всех Знаний человечества!<br>
+              | Наставники Академии посвящены хранителями древнейших школ на Земле.
