--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -8,13 +8,15 @@
 
 //---------------
 .faculties-main
-  padding-top 100px
+  padding-top 80px
   +to-width($screen-sm-max)
     padding-top 60px
 
   &__list
     margin-top 30px
     margin-bottom 30px
+    > div
+      margin 0
 
   &__item
     text-align center
@@ -128,10 +130,35 @@
   +to-width($screen-sm-max)
     padding 30px 0
 
+  &__list
+    > div
+      margin 15px 0 0 0
+
   &__desc
     padding-top 2rem
     font-size 14px
+  &__img-1
+    background-image url(../img/custom/krishna.jpg)
+  &__img-2
+    background-image url(../img/custom/sky-stars-man.jpg)
+  &__img-3
+    background-image url(../img/custom/mans-eye.jpg)
+  &__img-4
+    background-image url(../img/custom/earth-woman.jpg)
+  &__img-5
+    background-image url(../img/custom/brain-food.jpg)
+  &__img-6
+    background-image url(../img/custom/sky-head.jpg)
+  &__img-7
+    background-image url(../img/custom/hug-yourself.jpg)
+  &__img-8
+    background-image url(../img/custom/pregnant.jpg)
 
+.faculties-knowledge
+  &__img-1
+    background-image url(../img/custom/books.jpg)
+  &__img-2
+    background-image url(../img/custom/student.jpg)
 //--- common ------
 
 .responsive-table-1
@@ -168,6 +195,13 @@
   background-color black
   width 10%
   margin: 30px auto
+
+.line-divider-white
+  height 1px
+  background-color white
+  opacity 0.4
+  width 40%
+  margin: 25px auto 20px
 
 .list-in-oval
   padding 60px 0
@@ -241,6 +275,8 @@
       font-weight normal
       font-size 1.5rem
       color #021026
+      +to-width($screen-xm-max)
+        margin-left 40px
       +to-width($screen-xs-max)
         margin-left 20px
     ul
@@ -258,5 +294,78 @@
           vertical-align middle
           background-image url(../img/custom/marker.png)
           background-size cover
+      +to-width($screen-xm-max)
+        padding-left 20px
       +to-width($screen-xs-max)
         padding-left 0
+  &__with-backimg
+    background-size cover
+    background-position 50% 50%
+    border-radius 20px
+    position relative
+    min-height 445px
+    +to-width(1185px)
+      min-height 415px
+    +to-width($screen-md-min)
+      min-height 300px
+
+    &--left
+      padding 45px 60px 75px
+      +to-width($screen-md-max)
+        padding 30px 30px 60px
+      +to-width($screen-xs-max)
+        padding 15px 15px 40px
+    &--right
+      display flex
+      align-items center
+      &:before
+        content ""
+        position absolute
+        top 40px
+        bottom 40px
+        left 40px
+        right 40px
+        z-index 3
+        border 1px solid rgba(255, 255, 255, .5);
+        border-radius 15px
+        +to-width($screen-xs-max)
+          border none
+    &:after
+      content ""
+      position absolute
+      top 0
+      bottom 0
+      left 0
+      right 0
+      z-index 2
+      background #92278f
+      background linear-gradient(45deg, #92278f 0%,#92278f 0%,#00c0f3 100%)
+      border-radius 20px
+      opacity 0.8
+
+  &__item
+    z-index 3
+    position relative
+    margin auto
+
+  &__with-margin
+    margin-top 50px
+    margin-bottom 140px
+    +to-width($screen-xm-max)
+      margin-top 30px
+      margin-bottom 70px
+  &__title2
+    font-weight normal
+    font-size 1.5rem
+    color white
+    text-align center
+    text-transform uppercase
+
+.text
+  &__bold
+    font-weight 500
+  &__c
+    display block
+    text-align center
+  &__white
+    color white
