faculties page minor fixes

--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -355,7 +355,7 @@
       margin-top 30px
       margin-bottom 70px
   &__title2
-    font-weight normal
+    font-weight 300
     font-size 1.5rem
     color white
     text-align center
