faculty-veda page first section complete

--- a/src/pug/layouts/faculties-courses.pug
+++ b/src/pug/layouts/faculties-courses.pug
@@ -1,8 +1,8 @@
 .faculties-courses
     .container
         h2.title__wrapper.wow.animated.wow.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
-            .title__subtext Отдельные курсы
-            .title__subtext.with-border.with-border__long
+            .title__h2 Отдельные курсы
+            .title__h2.with-border.with-border__long
                 span Академии
         h3.title__light.title__light--pink Фундаментальные знания
 
