--- a/src/pug/layouts/faculties-knowledge.pug
+++ b/src/pug/layouts/faculties-knowledge.pug
@@ -1,9 +1,9 @@
 .faculties-knowledge
     .container
         h2.title__wrapper.wow.animated.wow.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
-            .title__subtext.title__light--pink Структура передачи знания
-            .title__subtext Студентам ведической академии
-            .title__subtext.with-border.with-border__long
+            .title__h2.title__light--pink Структура передачи знания
+            .title__h2 Студентам ведической академии
+            .title__h2.with-border.with-border__long
                 span Шринаджи
 
         h4(style="margin-top: 50px").title__wrapper.title__light-no-bottom-margin Программа предусматривает не просто передачу профессиональных знаний,<br>но и развитие человека и в материальном и в духовном плане
