--- a/src/pug/layouts/faculties-main.pug
+++ b/src/pug/layouts/faculties-main.pug
@@ -1,7 +1,7 @@
 .faculties-main
     .container
         h2.title__wrapper.wow.animated.wow.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
-            .title__subtext В академии действуют
+            .title__h2 В академии действуют
             .title__pink.with-border.with-border__long
                 span Факультеты
 
