--- a/src/pug/layouts/faculty/faculty-veda-about.pug
+++ b/src/pug/layouts/faculty/faculty-veda-about.pug
@@ -4,7 +4,7 @@
             .title__main Искусство
             .title__main.with-border
                 span жизни
-            .title__subtext Веды и прикладная психология
+            .title__h2 Веды и прикладная психология
         .faculty-about__text
             p Факультет проводит фундаментальную<br>
                 | подготовку сознания студентов академии
@@ -49,3 +49,8 @@
                     .faculty__task-item--bottom
                         .faculty__task-number 6
                         .faculty__task-desc Получить знание о социуме, управленческие и наставнические навыки
+
+        .faculty__margin.text__c Для полной реализации недостаточно приобрести профессию. Необходимо обладать<br>
+            | широким мировоззрением и владеть знанием психологии личности и социума.<br>
+            | В достаточной мере управлять своим сознанием и видеть Мироздание во всей полноте<br>
+            | Обладать организационными, управленческими и наставническими навыкамм.
