--- a/src/pug/layouts/schedule.pug
+++ b/src/pug/layouts/schedule.pug
@@ -2,7 +2,7 @@
     .container
         h2.title__wrapper.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
             .title__pink Расписание
-            .title__subtext.with-border.with-border__long
+            .title__h2.with-border.with-border__long
                 span Очных курсов академии
 
         h3.title__wrapper.title__light Ступень I
