--- a/src/stylus/styles/content/home.styl
+++ b/src/stylus/styles/content/home.styl
@@ -35,6 +35,14 @@ $program-width = 65%
     +to-width($screen-xs-max)
       font-size 13px
 
+  &__h2
+    font-family $font-second
+    font-size 24px
+    +to-width($screen-sm-max)
+      font-size: 20px;
+    +to-width($screen-xs-max)
+      font-size 16px
+
   &__light
     text-align center
     margin-top 50px
@@ -54,7 +62,7 @@ $program-width = 65%
 
   &__pink
     font-family $font-second
-    font-size 20px
+    font-size 24px
     color $second-color
 
 //-----------------
