--- a/src/pug/layouts/faculties-about.pug
+++ b/src/pug/layouts/faculties-about.pug
@@ -3,7 +3,7 @@
         h1.title__wrapper.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
             .title__main.with-border
                 span Факультеты и курсы
-            .title__subtext Обучение онлайн и очно <br> в Индии, России и Казахстане по-русски
+            .title__h2 Обучение онлайн и очно <br> в Индии, России и Казахстане по-русски
         .faculties-about__text
             p Науки: Веды, Астрология, Джйотиш, Йога, Васту, Аюрведа - им более 5000 лет!<br>
               | Познайте искусство счастливой жизни. Обретите благородную профессию.
