faculty-veda page courses section start

--- a/src/pug/layouts/faculties-about.pug
+++ b/src/pug/layouts/faculties-about.pug
@@ -5,7 +5,7 @@
                 span Факультеты и курсы
             .title__h2 Обучение онлайн и очно <br> в Индии, России и Казахстане по-русски
         .faculties-about__text
-            p Науки: Веды, Астрология, Джйотиш, Йога, Васту, Аюрведа - им более 5000 лет!<br>
+            p Науки: Веды, Астрология, Джйотиш, Йога, Васту, Аюрведа — им более 5000 лет!<br>
               | Познайте искусство счастливой жизни. Обретите благородную профессию.
             p Вы поймете себя и Вселенную, соприкоснетесь с источником всех Знаний человечества!<br>
               | Наставники Академии посвящены хранителями древнейших школ на Земле.
