--- a/src/pug/layouts/faculty/faculty-veda-learning.pug
+++ b/src/pug/layouts/faculty/faculty-veda-learning.pug
@@ -3,3 +3,10 @@
         h2.title__wrapper.wow.animated.fadeIn(data-wow-duration="1s", data-wow-delay=".1s")
             .title__h2.with-border.with-border__long Факультет
             .title__h2 «Искусство жизни. Веды<br>и прикладная психолгия»
+
+        h3.title__light.title__light--pink Учебный процесс
+
+        .text__c
+            p Обучение на факультете предусматривает четыре курса по 108 часов каждый.<br>
+                | Первые два являются базовыми — программа повторяется на всех факультетах.<br>
+                | Третий и четвертый дают специальность и общие фундаментальные знания.
