--- a/src/pug/layouts/schedule.pug
+++ b/src/pug/layouts/schedule.pug
@@ -16,19 +16,19 @@
                 td
             tr
 
-                td 26.04.20 - 21 день
+                td 26.04.20 — 21 день
                 td Москва, Ru
                 td Три смысла жизни
                 td
                     a.underline-link Подробнее
             tr
-                td 26.03.20 - 21 день
+                td 26.03.20 — 21 день
                 td С-Петербург, Ru
                 td Три смысла жизни
                 td
                     a.underline-link Подробнее
             tr
-                td 26.03.20 - 21 день
+                td 26.03.20 — 21 день
                 td Атерау, Kz
                 td Три смысла жизни
                 td
@@ -45,13 +45,13 @@
                 td
             tr
 
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Naggar, In
                 td Фокус. Успех. Джйотиш
                 td
                     a.underline-link Подробнее
             tr
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Goa, In
                 td Фокус. Успех. Джйотиш
                 td
@@ -68,13 +68,13 @@
                 td
             tr
 
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Naggar, In
                 td Фокус. Успех. Джйотиш
                 td
                     a.underline-link Подробнее
             tr
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Goa, In
                 td Фокус. Успех. Джйотиш
                 td
@@ -91,13 +91,13 @@
                 td
             tr
 
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Naggar, In
                 td Фокус. Успех. Джйотиш
                 td
                     a.underline-link Подробнее
             tr
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Goa, In
                 td Фокус. Успех. Джйотиш
                 td
@@ -114,13 +114,13 @@
                 td
             tr
 
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Naggar, In
                 td Фокус. Успех. Джйотиш
                 td
                     a.underline-link Подробнее
             tr
-                td 26.24.20 - 14 дней
+                td 26.24.20 — 14 дней
                 td Goa, In
                 td Фокус. Успех. Джйотиш
                 td
