faculty-veda page courses section continue

--- a/src/pug/layouts/faculty/faculty-veda-learning.pug
+++ b/src/pug/layouts/faculty/faculty-veda-learning.pug
@@ -10,3 +10,44 @@
             p Обучение на факультете предусматривает четыре курса по 108 часов каждый.<br>
                 | Первые два являются базовыми — программа повторяется на всех факультетах.<br>
                 | Третий и четвертый дают специальность и общие фундаментальные знания.
+
+        .grid.grid-top
+            .col-1-2.col-sm-1-1
+                .course__item.gray-border
+                    h4
+                        .course__title
+                            .course__number.title__h2 Курс&nbsp;I
+                            .course__option ОЧНО / ОНЛАЙН
+                        .course__subtitle
+                            p Предназначение энергия отношения<br>
+                                | «Сознание Брахмы»
+                            p Творец. Курс из трех частей
+                    .line-divider
+
+                    h5 Часть 1. Передает фундаментальные Ведические Знания (57ч):
+                    ul
+                        li O мироздании, человеке, карме (судьбе), дхарме, долге, духовном предназначении;
+                        li О высоких гармоничных отношениях, энергообмене и карма-йоге;
+                        li Наделяет сознанием высокой цели, призвания, энергией и удачей.
+                    h5 Часть 2. Базовые практики хатха-йоги, очищения, здоровья спины, суставов (36ч).
+                    h5 Часть 3. Введение в астрологию джйотиш, панчанга, мухурта, I ступень (15ч).
+
+                    p Каждый участник I-го курса получает расшифровку натальной карты в области предназначения,
+                        | призвания и долга. Каждый выпускник получает свидетельство о прохождении курса, который
+                        | является допуском ко II-му курсу.
+                    .line-divider
+
+                    .course__buy
+                        .course__buy--group
+                            .course__buy--type «Стандарт»
+                            .course__buy--price 39 000 РУБ.
+                        .course__buy--button
+                            .btn__wrapper
+                                .btn.btn--full Купить
+
+            .col-1-2.col-sm-1-1
+                .course__item курс2
+            .col-1-2.col-sm-1-1
+                .course__item курс3
+            .col-1-2.col-sm-1-1
+                .course__item курс4
