faculty-veda page done

--- a/src/stylus/_core/variables.styl
+++ b/src/stylus/_core/variables.styl
@@ -11,6 +11,8 @@ $font-second = Romul;
 $base-color = #00c0f3
 $second-color = #92278f
 $gray-color = #f2f2f2
+$black-color = #000
+$dark-gray-color = #939598
 $base-color-hover = darken($base-color, 20%)
 $secons-color-hover = darken($second-color, 20%)
 
