--- a/src/stylus/styles/content/faculty.styl
+++ b/src/stylus/styles/content/faculty.styl
@@ -111,9 +111,15 @@
 
 .course
   &__item
-    padding 20px 60px
+    padding 20px 60px 60px
+    cursor pointer
+    display block
+    transition all 0.7s
     +to-width($xs-max-viewport)
       padding 10px 20px
+    &:hover
+      box-shadow inset 0 0 60px rgba(0, 192, 243, 0.35)
+      background linear-gradient(45deg, #92278f 0%, rgba(146, 39, 143, 0) 0%, rgba(0, 192, 243, 0) 100%)
 
   &__title
     display flex
@@ -134,8 +140,108 @@
 
   &__option
     text-align right
+
+  &__subtitle
+    margin-top 30px
+    :nth-child(1)
+      margin-bottom 0
+
+  &__part-title
+    margin 8px auto
+
+  &__buy
+    display flex
+    justify-content space-between
+    &--more
+      display flex
+      align-items end
+
+  &__content
+    min-height 320px
+
+  &__statement
+    margin-top 80px
+    margin-bottom 50px
+    +to-width($xs-max-viewport)
+      margin-top 40px
+      margin-bottom 25px
+  &__compare-package
+    background-color $gray-color
+    padding 45px 0 55px
+
+  &__general
+    text-align center
+    margin 90px 0 50px
+    font-weight normal
+    +to-width($screen-sm-max)
+      margin-bottom 40px
+    +to-width($screen-xs-max)
+      margin-bottom 20px
+    &--info
+      font-size 14px
+      max-width 940px
+      margin auto
+
+.package-types
+  margin-bottom 30px
+
+.package
+  &__wrapper
+    background-color $gray-color
+    border 1px solid $gray-color
+    border-radius 20px
+    padding 23px 0 0
+    margin-bottom 80px
+    transition all 0.7s
+    +to-width($screen-sm-max)
+      margin-bottom 60px
+    +to-width($screen-xs-max)
+      margin-bottom 40px
+    &:hover
+      background-color transparent
+      border 1px solid $base-color
+.buy
+  position relative
+  bottom -13px
+  background-color white
+  padding 0 10px
+  border-radius 15px
+  &__wrapper
+    display flex
+    align-items baseline
+    justify-content center
+
 //---- common ------
 
 .gray-border
   border 2px solid $gray-color
   border-radius 20px
+
+.list-small-dots
+  margin 0
+  padding 0
+  list-style none
+  li
+    padding 0 0 0 10px
+    position relative
+
+    &:before
+      content ""
+      display block
+      width 3px
+      height 3px
+      border-radius 50%
+      background-color #000
+      position absolute
+      left 0
+      top 9px
+      transform translateY(-50%)
+
+.margin-bottom90
+  margin-bottom 90px
+  +to-width($screen-sm-max)
+    margin-bottom 60px
+  +to-width($screen-xs-max)
+    margin-bottom 40px
+.margin-bottom20
+  margin-bottom 20px
